// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerReview > should render for unvote and vote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-8 w-8 text-sm ring-6 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center space-x-4 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800 border-t py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-8 w-8 text-sm ring-6 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase sm:text-sm"
            >
              ~ 
              10
               
              Seconds
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for unvote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-8 w-8 text-sm ring-6 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase sm:text-sm"
            >
              ~ 
              10
               
              Seconds
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for vote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-8 w-8 text-sm ring-6 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase sm:text-sm"
            >
              ~ 
              10
               
              Seconds
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
